--- a/app/src/main/res/drawable/toggle_selector.xml
+++ b/app/src/main/res/drawable/toggle_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 选中样式 -->
-    <item android:drawable="@drawable/ic_down_main_black" android:state_checked="true"/>
+    <item android:drawable="@drawable/ks" android:state_checked="true"/>
     <!-- 未选中样式 -->
-    <item android:drawable="@drawable/ic_down_main" android:state_checked="false"/>
+    <item android:drawable="@drawable/kr" android:state_checked="false"/>
 </selector>
