--- a/app/src/main/res/layout/fragment_bt_gift.xml
+++ b/app/src/main/res/layout/fragment_bt_gift.xml
@@ -15,7 +15,7 @@
 
     <Button
         android:id="@+id/bt_gift_center"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -27,7 +27,7 @@
 
     <Button
         android:id="@+id/bt_gift_new"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
