--- a/app/src/main/res/layout/fragment_bt_news.xml
+++ b/app/src/main/res/layout/fragment_bt_news.xml
@@ -6,16 +6,15 @@
         android:id="@+id/lv_news"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:layout_below="@+id/ll_news_button">
 
     </ListView>
     <LinearLayout
         android:id="@+id/ll_news_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:orientation="horizontal"
-        android:padding="5dp"
-        android:layout_alignParentBottom="true"
+
         android:weightSum="4">
         <Button
             android:id="@+id/bt_huodong"
