2018/02/08 返利中心构思

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,73 +3,90 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="#DC000000">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="#DC000000"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/iv_logo_login"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:background="@mipmap/logodd" />
+
         <EditText
             android:id="@+id/et_login_telephone"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_below="@+id/iv_logo_login"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
-            android:layout_marginTop="40dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="5dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/et_login"
-            android:textSize="13dp"
+            android:gravity="center_vertical"
+            android:hint="请输入11位手机号码"
+            android:paddingLeft="5dp"
             android:textColor="@color/colorWhite"
-            android:hint="请输入11位手机号码"/>
+            android:textSize="13dp" />
+
         <EditText
             android:id="@+id/et_login_password"
-            android:layout_below="@+id/et_login_telephone"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_below="@+id/et_login_telephone"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
             android:layout_marginTop="15dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="5dp"
             android:background="@drawable/et_login"
-            android:textSize="13dp"
-            android:textColor="@color/colorWhite"
+            android:gravity="center_vertical"
+            android:hint="请输入密码"
+            android:paddingLeft="5dp"
             android:password="true"
-            android:hint="请输入密码"/>
+            android:textColor="@color/colorWhite"
+            android:textSize="13dp" />
+
         <Button
             android:id="@+id/bt_login"
-            android:layout_below="@+id/et_login_password"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_below="@+id/et_login_password"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
             android:layout_marginTop="15dp"
-            android:gravity="center"
             android:background="@drawable/btn_login"
+            android:gravity="center"
+            android:text="登录"
             android:textColor="@color/colorWhite"
-            android:textSize="18dp"
-            android:text="登录"/>
+            android:textSize="18dp" />
+
         <TextView
             android:id="@+id/tv_register"
-            android:layout_below="@+id/bt_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_below="@+id/bt_login"
             android:layout_marginLeft="60dp"
+            android:layout_marginTop="15dp"
+            android:text="快速注册"
             android:textColor="@color/green"
-            android:textSize="15dp"
-            android:text="快速注册"/>
+            android:textSize="15dp" />
+
         <TextView
             android:id="@+id/tv_forget"
-            android:layout_below="@+id/bt_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="60dp"
             android:layout_alignParentRight="true"
+            android:layout_below="@+id/bt_login"
+            android:layout_marginRight="60dp"
+            android:layout_marginTop="15dp"
+            android:text="忘记密码？"
             android:textColor="@color/green"
-            android:textSize="15dp"
-            android:text="忘记密码？"/>
+            android:textSize="15dp" />
     </RelativeLayout>
 
 
