--- a/app/src/main/res/layout/activity_rebate.xml
+++ b/app/src/main/res/layout/activity_rebate.xml
@@ -24,10 +24,19 @@
             android:textSize="30dp"
             android:text="返利"/>
     </RelativeLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_rebate"
         android:layout_below="@+id/ll_rebater_head"
-        android:background="@mipmap/back"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
+    </android.support.design.widget.TabLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_rebate"
+        android:layout_below="@+id/tab_rebate"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
