--- a/app/src/main/res/layout/activity_change.xml
+++ b/app/src/main/res/layout/activity_change.xml
@@ -12,6 +12,12 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+        <ImageView
+            android:id="@+id/iv_logo_change"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:background="@mipmap/logodd" />
         <EditText
             android:id="@+id/et_change_telephone"
             android:layout_width="match_parent"
@@ -19,8 +25,9 @@
             android:layout_height="40dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:gravity="center_vertical"
+            android:layout_below="@+id/iv_logo_change"
             android:paddingLeft="5dp"
             android:background="@drawable/et_login"
             android:textSize="13dp"
