--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dl_main"
     android:layout_width="match_parent"
@@ -11,7 +11,8 @@
         android:layout_height="match_parent">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
             android:orientation="horizontal"
             android:background="@color/colorOrange1">
             <ImageView
@@ -21,7 +22,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:layout_alignParentLeft="true"
-                android:background="@mipmap/ic_launcher_round"
+                android:background="@mipmap/ic_down_main_black"
                 />
             <ImageView
                 android:id="@+id/iv_share"
@@ -63,13 +64,7 @@
         android:id="@+id/fl_content_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp">
+        android:layout_marginBottom="40dp">
     </FrameLayout>
-    <RelativeLayout
-        android:id="@+id/rl_left"
-        android:layout_width="280dp"
-        android:layout_height="match_parent"
-        android:background="@color/colorBlackBack">
 
-    </RelativeLayout>
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
