--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.aygames.twomonth.aybox.activity.NewsActivity">
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -30,6 +28,7 @@
                     android:background="@mipmap/title_back" />
 
                 <TextView
+                    android:id="@+id/tv_newstitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -39,6 +38,7 @@
             </RelativeLayout>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_news_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -50,6 +50,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_times"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -58,6 +59,7 @@
                 android:layout_marginLeft="40dp"
                 android:text="时间："/>
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_news_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,6 +68,7 @@
                 android:layout_marginLeft="5dp"
                 android:text="110"/>
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_liulan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -74,6 +77,7 @@
                 android:layout_marginLeft="10dp"
                 android:text="浏览次数："/>
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_count_news"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -88,5 +92,5 @@
                 android:padding="10dp"/>
 
         </RelativeLayout>
-    </ScrollView>
+
 </RelativeLayout>
