2018/02/10 返利功能基础流程

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="green">#41ff07</color>
     <color name="green2">#2cbe00</color>
     <color name="userback">#c2050505</color>
+    <color name="read">#f70606</color>
 </resources>
