--- a/app/src/main/res/layout/item_game_all.xml
+++ b/app/src/main/res/layout/item_game_all.xml
@@ -50,5 +50,13 @@
         android:singleLine="true"
         android:textSize="10dp"
         android:text="游戏简介"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/green2"
+        android:text="详情>>>"/>
 
 </RelativeLayout>
